...

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
...
    <string name="stop_scanning">Stop scanning</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="default_home_search_hint">Search name, user or url</string>
    <string name="all_items_home_search_hint">Search name, user, url or tag</string>
...
    <string name="common_failure_format">Something went wrong![%s]</string>
    <string name="common_refresh">Refresh</string>
    <string name="common_sign_out">Sign out</string>
    <string name="common_data_refresh_error">There was an error during data refresh. Swipe down to refresh.</string>
    <string name="common_decryption_failure">Error during secret decryption</string>
...
    <string name="resource_will_be_deleted">This will permanently remove this password from your account.</string>

    <string name="logout_dialog_message">If you sign out you will need to sign in again.</string>
    <string name="logout_dialog_sign_out">Sign out</string>

...
    <string name="session_expired">Session expired, please sign in again</string>

    <string name="accounts_list_title">Welcome back!</string>
    <string name="accounts_list_subtitle">Choose an account to sign in!</string>
    <string name="accounts_list_remove">Remove an account from this device</string>
...
    <string name="dialog_encourage_autofill_accessibility_other">Other</string>
    <string name="dialog_encourage_autofill_accessibility_title">Enable autofill via Accessibility Service</string>
    <string name="dialog_encourage_autofill_go_to_settings">Go to settings</string>
    <string name="dialog_encourage_autofill_service_header">Enable Autofill for most apps</string>
    <string name="dialog_encourage_autofill_service_description">On the Android settings screen, select Passly, turn on the toggle and press OK.
...
    <string name="dialog_autofill_enabled_go_to_app">Go to the app</string>
    <string name="dialog_autofill_enabled_got_it">Got it!</string>
    <string name="dialog_autofill_enabled_title">Passly Autofill enabled!</string>
    <string name="dialog_autofill_accessibility_service_description">Passly autofill based on Accessibility service.</string>
    <string name="dialog_autofill_enabled_message">Once you\'ve filled out a form, simply tap on the entry field and the
...
    <string name="resource_form_custom_fields_edit_not_supported">Edition of custom fields is currently not supported</string>

    <string name="settings_app_settings">App settings</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_terms_and_licenses">Terms &amp; licenses</string>
    <string name="settings_debug_logs">Debug, logs</string>
    <string name="settings_disable">Disable</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_sign_out_server_error">Signed out on this device. The server session may still be active.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_disable_biometric_confirmation_message">After disabling biometric you will need to login by using your passphrase.</string>
    <string name="settings_turn_on_biometric_title">Turn on biometric authentication</string>
    <string name="settings_turn_on_biometric_subtitle">Confirm using your biometric</string>
    <string name="settings_add_first_biometric">Please add your biometric in the system settings first</string>
    <string name="settings_add_first_biometric_title">Configure biometric</string>
    <string name="settings_add_first_biometric_settings">Go to settings</string>

...

    <string name="settings_accounts_manage_accounts">Manage accounts</string>
    <string name="settings_accounts_transfer_account">Transfer account to another device</string>
    <string name="settings_accounts_key_inspector">Key inspector</string>
    <string name="settings_accounts_account_details">Account details</string>

    <string name="settings_terms_and_licenses_privacy_policy">Privacy policy</string>
    <string name="settings_terms_and_licenses_licenses">Open Source Licenses</string>
    <string name="settings_terms_and_licenses_terms">Terms &amp; Conditions</string>

    <string name="settings_app_settings_default_filter">Default filter</string>
    <string name="settings_app_settings_autofill">Autofill</string>
    <string name="settings_app_settings_biometric">Biometric</string>
    <string name="settings_app_settings_biometry_error">Biometry error. %s</string>
    <string name="settings_app_settings_biometry_authentication_error">Biometry authentication error. %s</string>
    <string name="settings_app_settings_expert_settings">Expert settings</string>

    <string name="settings_app_settings_expert_settings_require_auth_on_every_entry">Require auth on every entry</string>
    <string name="settings_app_settings_expert_settings_hide_root">Hide “device is rooted” dialog</string>
    <string name="settings_app_settings_expert_settings_fetch_page_size">API fetch page size</string>
    <string name="settings_page_size_description">Number of resources fetched per API request. Higher values use more memory but reduce the number of network requests.</string>
    <string name="settings_page_size_exceeds_recommended_limit">Exceeds recommended limit. May cause app slowdowns.</string>
...
